
** New nadvice.el package offering lighter-weight advice facilities.
It is layered as:
- add-function/remove-function which can be used to add/remove code on any
  function-carrying place, such as process-filters or `<foo>-function' hooks.
- advice-add/advice-remove to add/remove a piece of advice on a named function,
  much like `defadvice' does.


* Incompatible Lisp Changes in Emacs 24.4

** Default process filers and sentinels are not nil any more.
Instead they default to a function which does what the nil value used to do.

** `read-event' does not return decoded chars in ttys any more.
Just as was the case in Emacs-22 and before, decoding of tty input according to
keyboard-coding-system is not performed in read-event any more.  But contrary
to that past, it is still done before input-decode-map/function-key-map/...

** Removed inhibit-local-menu-bar-menus.

** frame-local variables that affect redisplay do not work any more.
More specifically, the redisplay does not bother to check for a frame-local
value when looking up variables.

** nil and "unbound" are indistinguishable in symbol-function.
`symbol-function' never signals `void-function' any more.
`fboundp' returns non-nil if the symbol was `fset' to nil.

** `defadvice' does not honor the `freeze' flag and cannot advise
special-forms any more.

** `dolist' in lexical-binding mode does not bind VAR in RESULT any more.
VAR was bound to nil which was not tremendously useful and just lead to
spurious warnings about an unused var.

** The return value of `backup-buffer' has changed.
The second argument is no longer an SELinux context, instead it is an
alist of extended attributes as returned by the new function
`file-extended-attributes'.  The attributes can be applied to another
file using `set-file-extended-attributes'.


* Lisp Changes in Emacs 24.4

** Obsoleted functions:
*** `dont-compile'
*** `lisp-complete-symbol'
*** `field-complete'
*** `minibuffer-completion-contents'